--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     
+    <div class="container">
+        <div class="display"></div>
+        <div class="buttons">
+            
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
