fix display & add footer

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 
 </head>
 <body>
-    
     <div class="container">
         <div class="display"></div>
     </div>
+    <div class="footer">
+        <p>by Lorenzo Giambellini</p>
+    </div>
     <script src="script.js"></script>
+
 </body>
 </html>
